# Rokon

./: .dockerignore  .editorconfig  .gitignore  .gitpod.yml  .golangci.yml  .goreleaser.yml  .markdownlint.json  .obsinfo  APKBUILD  AppImageBuilder.yml  Dockerfile  LICENSE.md  Makefile  PKGBUILD  PRIVACY.md  README.md  Rokon.profile  _service  appimage.yml  appimagecraft.yml  cgosymbolizer_darwin.go  go-vendor-tools.toml  go.mod  go.mod.yml  go.sum  golang-github-brycensranch-aptabase.spec  golang-github-brycensranch-rokon.spec  main.go  modules.txt  multiarch.Dockerfile  otel.go  pubkey.asc  rokon-OLD.spec  rokon.spec  screenshot.Dockerfile  snapcraft.yaml  virtual-desktop.sh  windows.Dockerfile  wine_detect_windows.go
.devcontainer/: Dockerfile  devcontainer.json
.github/: .releaserc.json  BANNED.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  commitlint.config.js  generate-rtf.js  package-lock.json  package.json  publish.yml  pull_request_template.md  renovate.json
.osc/: _files  _meta  _project
assets/: Rokon.ai  Rokon.psd
bsd/: Makefile  pkg-descr
debian/: README.md  changelog  control  copyright  publish.sh  rules  watch
flathub/: README.md  go.mod.yml  io.github.brycensranch.Rokon-beta.yml  io.github.brycensranch.Rokon.yml  modules.txt  org.freedesktop.Sdk.Extension.golang.appdata.xml  org.freedesktop.Sdk.Extension.golang.yml
macos/: icns.sh  icon.icns  io.github.BrycensRanch.Rokon.plist  ldd-apple.sh  rokon.sh
old/: go.mod  go.sum  main.go  modules.txt  (+2 more)
old/lib/sysinfo/: Cargo.toml  README.md
old/lib/sysinfo/src/: build.rs  lib.rs
(+48 files in other folders)
